[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/modelos/lia-modelo.png" type="Texture" id=1]
[ext_resource path="res://scripts/DialogSystem.gd" type="Script" id=2]

[node name="DialogueSystem" type="Node2D"]
script = ExtResource( 2 )

[node name="QuestMark" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.0705882, 0.25098, 0.862745, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogContainer" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lia Modelo" type="Sprite" parent="CanvasLayer/DialogContainer"]
position = Vector2( 70, 184.265 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="Character" type="Sprite" parent="CanvasLayer/DialogContainer"]
position = Vector2( 410, 184.265 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )
flip_h = true

[node name="DialogBox" type="ColorRect" parent="CanvasLayer/DialogContainer"]
margin_left = 116.0
margin_top = 145.0
margin_right = 367.0
margin_bottom = 271.0
color = Color( 0.188235, 0.176471, 0.176471, 0.537255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="CanvasLayer/DialogContainer/DialogBox"]
margin_left = 10.0
margin_top = 12.0
margin_right = 241.0
margin_bottom = 43.0
text = "Lia Diz:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="CanvasLayer/DialogContainer/DialogBox"]
margin_left = 10.0
margin_top = 41.0
margin_right = 241.0
margin_bottom = 108.0
text = "Oi mãe, eu já estou indo, serei rápida"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
